<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="movies">Movies</string>
    <string name="tv_movies">Tv Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="title">Title</string>
    <string name="minus">-</string>
    <string name="genre">Genre</string>
    <string name="ten_percen">10%</string>
    <string name="description">Description</string>
</resources>
